[GTK][WK2] accessibility/language-attribute.html is failing https://bugs.webkit.org/show_bug.cgi?id=106342

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-04-19
Reviewed by Gyuyoung Kim.

Tools:

Adds support for getting language information.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::language):

LayoutTests:

Unskipping accessibility/language-attribute.html.

* platform/gtk-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/133253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148737 268f45cc-cd09-0410-ab3c-d52691b4dbfc